--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,18 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = numbasom
 # For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
+# repo_name = numbasom
 # company_name = nike
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
-# copyright = Put your copyright information here
-branch = {branch}
+user = nmarincic
+description = A Fast Self-Organizing Map Python Library Implemented in Numba
+keywords = SOM, self-organizing, map, python, numba
+author = Nikola Marincic
+author_email = nikola.marincic@gmail.com
+copyright = Nikola Marincic
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
