added matplotlib dependency

--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ lib_name = numbasom
 
 user = nmarincic
 description = A Fast Self-Organizing Map Python Library Implemented in Numba
-keywords = SOM, self-organizing, map, python, numba
+keywords = SOM self-organizing map python numba AI ML kohonen
 author = Nikola Marincic
 author_email = nikola.marincic@gmail.com
 copyright = Nikola Marincic
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-# requirements = numba numpy
+# requirements = numba numpy matplotlib
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
