--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -12,6 +12,9 @@ entries:
     - output: web,pdf
       title: numbasom
       url: core.html
+    - output: web,pdf
+      title: vizualisation
+      url: viz.html
     output: web
     title: numbasom
   output: web
