--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-# requirements = nbconvert==5.6.1 jupyter-client==6.1.2 numba numpy matplotlib
+# requirements = fastcore nbconvert==5.6.1 jupyter-client==6.1.2 numba numpy matplotlib
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
