--- a/settings.ini
+++ b/settings.ini
@@ -14,7 +14,7 @@ author_email = nikola.marincic@gmail.com
 copyright = Nikola Marincic
 branch = master
 version = 0.0.2
-min_python = 3.8
+min_python = 3.6
 audience = Developers
 language = English
 # Set to True if you want to create a more fancy sidebar.json than the default
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-# requirements = fastcore nbconvert==5.6.1 jupyter-client==6.1.2 numba numpy matplotlib
+requirements = fastcore nbconvert==5.6.1 jupyter-client==6.1.2 numba numpy matplotlib
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
