--- a/conda/numbasom/meta.yaml
+++ b/conda/numbasom/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: numbasom
-  version: 0.0.2
+  version: 0.0.3
 source:
-  sha256: 8f1812d183ba5ab252bc4fd036243ea126f90db3a16d4b8394fea65baa5c74af
-  url: https://files.pythonhosted.org/packages/22/9b/15c543248f1f6519889256d98ca7ec7719839887c45dce51022cfb1a3cb9/numbasom-0.0.1.tar.gz
+  sha256: b84608e0664bd03bbf1b1e45e6c6f1783385ec3f22de607f7e263adcdb7870d3
+  url: https://files.pythonhosted.org/packages/cf/e2/ddfd171593f72816cb569608dac7c916b95256bbdf927aa5d2678dda91bb/numbasom-0.0.3.tar.gz
 about:
   dev_url: https://nmarincic.github.io
   doc_url: https://nmarincic.github.io
@@ -23,10 +23,22 @@ requirements:
   - pip
   - python
   - packaging
+  - fastcore
+  - nbconvert==5.6.1
+  - jupyter-client==6.1.2
+  - numba
+  - numpy
+  - matplotlib
   run:
   - pip
   - python
   - packaging
+  - fastcore
+  - nbconvert==5.6.1
+  - jupyter-client==6.1.2
+  - numba
+  - numpy
+  - matplotlib
 test:
   imports:
   - numbasom
