--- a/settings.ini
+++ b/settings.ini
@@ -8,14 +8,15 @@ author = Nikola Marincic
 author_email = nikola.marincic@gmail.com
 copyright = Nikola Marincic
 branch = master
-version = 0.0.3
+version = 0.0.4
 min_python = 3.6
 audience = Developers
 language = English
 custom_sidebar = False
 license = apache2
 status = 2
-requirements = fastcore nbconvert==5.6.1 jupyter-client==6.1.2 numba numpy matplotlib
+requirements = numba numpy matplotlib
+dev_requirements = nbconvert==5.6.1 jupyter-client==6.1.2
 nbs_path = .
 doc_path = docs
 recursive = False
